# Nerf_Studio_Custom

./: README.md  README_renderer.md  custom_camera_renderer.py  exact_nerfstudio_cli.py  fast_renderer.py  pyproject.toml  simple_renderer.py
IUI3-RedSea/: poses_bounds.npy
IUI3-RedSea/colmap/sparse/0/: project.ini
IUI3-RedSea/outputs/IUI3-RedSea/my-method/2025-07-02_192016/: config.yml
IUI3-RedSea/outputs/unnamed/seathru-nerf-lite/2025-07-02_183343/: config.yml
IUI3-RedSea/outputs/unnamed/seathru-nerf-lite/2025-07-02_183430/: config.yml
IUI3-RedSea/outputs/unnamed/seathru-nerf-lite/2025-07-02_184540/: config.yml
my_method/: __init__.py  custom_model.py  my_config.py
my_method.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
outputs/IUI3-RedSea/my-method/2025-07-02_192215/: config.yml
outputs/IUI3-RedSea/my-method/2025-07-02_192331/: config.yml
outputs/IUI3-RedSea/my-method/2025-07-02_192520/: config.yml
outputs/IUI3-RedSea/my-method/2025-07-02_200250/: config.yml
outputs/unnamed/my-method/2025-07-02_192605/: config.yml
outputs/unnamed/my-method/2025-07-02_192654/: config.yml
outputs/unnamed/my-method/2025-07-02_192808/: config.yml
outputs/unnamed/my-method/2025-07-02_192935/: config.yml
outputs/unnamed/my-method/2025-07-02_193014/: config.yml
outputs/unnamed/my-method/2025-07-02_193108/: config.yml  dataparser_transforms.json
outputs/unnamed/my-method/2025-07-02_193155/: config.yml
outputs/unnamed/my-method/2025-07-02_200413/: config.yml
outputs/unnamed/my-method/2025-07-02_200704/: config.yml
(+34 files in other folders)
