[project]
name = "my_method"
version = "0.1.0"
description = "A custom NeRF method for nerfstudio"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "nerfstudio" # you may want to consider pinning the version, ie "nerfstudio==0.1.19"
]

[tool.setuptools.packages.find]
include = ["my_method*"]

[project.entry-points.'nerfstudio.method_configs']
my-method = 'my_method.my_config:MyMethod'